--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -56,7 +56,7 @@ jobs:
     needs: start
     runs-on: ubuntu-20.04
     permissions:
-      repo: read
+      actions: none
     steps:
       - name: Nothing
         run: true
