--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -24,7 +24,7 @@ jobs:
           result-encoding: string
           script: |
             // Make sure we're being spoken to
-            if (context.payload.action !== 'created' || !('pull_request' in context.issue) || context.payload.comment.body !== '/hi') {
+            if (context.payload.action !== 'created' || !('pull_request' in context.payload.issue) || context.payload.comment.body !== '/hi') {
                 console.log('Not our command.');
                 return;
             }
