--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -76,6 +76,9 @@ jobs:
             });
             
             return { interpretation: 'request-valid', build_sha: head_sha };
+            
+      - name: Show output
+        run: echo '${{ steps.interpret.outputs }}'
 
   build:
     needs: start
